Header alignment and Algolia fixes (#514)
* Aligned documentation section header rendering, to be the same across all pages

* Removed redundant split of Algolia configuration. Fixed it to reflect new documentation structure.

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -19,3 +19,7 @@
 .site-name {
   display: none;
 }
+
+.sidebar .sidebar-items {
+  padding-top: 0;
+}
